--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -1,11 +1,18 @@
+.noBullets {
+	list-style-type: none;
+	margin-top: -11%;
+}
+
+
 .site-header {
 	position: absolute !important;
 	top: 0;
 	width: 100%;
 	z-index: 10 !important;
-	background: color-bg(header);
+	background-color: black;
+	margin-bottom: 10%;
 
-	+ .site-content {
+	+.site-content {
 
 		.section:first-of-type {
 			padding-top: $header-height__mobile;
@@ -14,13 +21,13 @@
 
 	.brand {
 		margin-right: $header-nav--padding-h;
-	}	
+	}
 }
 
 .site-header-inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	height: $header-height__mobile;
 }
 
@@ -32,36 +39,34 @@
 		flex-grow: 1;
 	}
 
-    ul {
-        display: flex;
-        align-items: center;
+	ul {
+		display: flex;
+		align-items: center;
 		flex-grow: 1;
-        white-space: nowrap;
+		white-space: nowrap;
 		margin-bottom: 0;
 
 		&:first-of-type {
 			flex-wrap: wrap;
 		}
-    }
+	}
 
-    li {
+	li {
 
-		+ .header-button {
-			margin-left: $header-nav--padding-h;
-		}
-    }
+		+.header-button {}
+	}
 
-    a:not(.button) {
+	a:not(.button) {
 		display: block;
-        @include anchor-aspect(header);
+		@include anchor-aspect(header);
 		@include font-weight(header-link);
 		text-transform: $link-header--transform;
-        padding: 0 $header-nav--padding-h;
+		padding: 0 $header-nav--padding-h;
 
 		.invert-color & {
 			@include anchor-aspect(header, inverse);
 		}
-    }
+	}
 
 	a.button {
 		margin-left: $header-nav--padding-h;
@@ -76,7 +81,7 @@
 .header-nav-right {
 	justify-content: flex-end;
 
-	+ .header-nav-right {
+	+.header-nav-right {
 		flex-grow: 0;
 	}
 }
@@ -85,13 +90,13 @@
 	display: none;
 }
 
-@include media( '<=medium' ) {
+@include media('<=medium') {
 
 	.header-nav-toggle {
 		display: block;
 
 		// Header navigation when the hamburger is a previous sibling
-		+ .header-nav {
+		+.header-nav {
 			flex-direction: column;
 			position: absolute;
 			left: 0;
@@ -100,9 +105,9 @@
 			z-index: 9999;
 			background: color-bg(menu-mobile);
 			max-height: 0;
-	        opacity: 0;
-	        overflow: hidden;
-	        transition: max-height .25s ease-in-out, opacity .15s;
+			opacity: 0;
+			overflow: hidden;
+			transition: max-height .25s ease-in-out, opacity .15s;
 
 			&.is-active {
 				opacity: 1;
@@ -117,12 +122,12 @@
 				display: block;
 				text-align: center;
 
-			    a:not(.button) {
+				a:not(.button) {
 					display: inline-flex;
-			        @include anchor-aspect(header-mobile);
+					@include anchor-aspect(header-mobile);
 					padding-top: $header-nav--padding-v__mobile / 2;
 					padding-bottom: $header-nav--padding-v__mobile / 2;
-			    }
+				}
 			}
 
 			a.button {
@@ -134,11 +139,11 @@
 	}
 }
 
-@include media( '>medium' ) {
+@include media('>medium') {
 
 	.site-header {
 
-		+ .site-content {
+		+.site-content {
 
 			.section:first-of-type {
 				padding-top: $header-height__desktop;
