--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -1,5 +1,11 @@
-// Colors
+// Neon Button Colors
+$spotOne: #26115a;
+$spotTwo: #ec008c;
+$spotThree: #ff0000;
 
+$spotFour: #115a15;
+$spotFive: #d4ec00;
+$spotSix: #2f00ff;
 // The color palette
 $palette: (
 	light: (
@@ -8,7 +14,7 @@ $palette: (
 		3: #717D86
 	),
 	dark: (
-		1: #151719,
+		1: #000000,
 		2: #25282C,
 		3: #33363A
 	),
