--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -1,16 +1,31 @@
 .noBullets {
 	list-style-type: none;
-	margin-top: -11%;
+	margin-top: 0%;
+
+	@include respond(phone) {
+		float: Left;
+		padding: 0;
+		margin: 0;
+
+		li {
+			display: inline-block;
+			padding: 10px 30px;
+		}
+	}
 }
 
 
 .site-header {
-	position: absolute !important;
+	position: absolute;
 	top: 0;
-	width: 100%;
 	z-index: 10 !important;
 	background-color: black;
 	margin-bottom: 10%;
+
+	@include respond(phone) {
+		position: relative;
+
+	}
 
 	+.site-content {
 
