--- a/src/assets/scss/theme/elements/_buttons.scss
+++ b/src/assets/scss/theme/elements/_buttons.scss
@@ -108,6 +108,7 @@
     @include respond(phone) {
         position: relative;
         margin: auto;
+        margin-right: -96%;
         padding-right: 1.5rem;
         padding-left: 1.5rem;
         font-size: 1rem;
